; ModuleID = '/home/carl/AnghaBench/linux/drivers/perf/hisilicon/extr_hisi_uncore_hha_pmu.c_hisi_hha_pmu_disable_counter.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/perf/hisilicon/extr_hisi_uncore_hha_pmu.c_hisi_hha_pmu_disable_counter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hisi_pmu = type { i64 }
%struct.hw_perf_event = type { i32 }

@HHA_EVENT_CTRL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hisi_pmu*, %struct.hw_perf_event*)* @hisi_hha_pmu_disable_counter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @hisi_hha_pmu_disable_counter(%struct.hisi_pmu* %0, %struct.hw_perf_event* %1) #0 {
  %3 = alloca %struct.hisi_pmu*, align 8
  %4 = alloca %struct.hw_perf_event*, align 8
  %5 = alloca i32, align 4
  store %struct.hisi_pmu* %0, %struct.hisi_pmu** %3, align 8
  store %struct.hw_perf_event* %1, %struct.hw_perf_event** %4, align 8
  %6 = load %struct.hisi_pmu*, %struct.hisi_pmu** %3, align 8
  %7 = getelementptr inbounds %struct.hisi_pmu, %struct.hisi_pmu* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @HHA_EVENT_CTRL, align 8
  %10 = add nsw i64 %8, %9
  %11 = call i32 @readl(i64 %10)
  store i32 %11, i32* %5, align 4
  %12 = load %struct.hw_perf_event*, %struct.hw_perf_event** %4, align 8
  %13 = getelementptr inbounds %struct.hw_perf_event, %struct.hw_perf_event* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = shl i32 1, %14
  %16 = xor i32 %15, -1
  %17 = load i32, i32* %5, align 4
  %18 = and i32 %17, %16
  store i32 %18, i32* %5, align 4
  %19 = load i32, i32* %5, align 4
  %20 = load %struct.hisi_pmu*, %struct.hisi_pmu** %3, align 8
  %21 = getelementptr inbounds %struct.hisi_pmu, %struct.hisi_pmu* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  %23 = load i64, i64* @HHA_EVENT_CTRL, align 8
  %24 = add nsw i64 %22, %23
  %25 = call i32 @writel(i32 %19, i64 %24)
  ret void
}

declare dso_local i32 @readl(i64) #1

declare dso_local i32 @writel(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
